Add Contact pade ,Redesign Navbar And Footer.

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,13 @@
   margin: 0 auto;
   
 }
+/* color veriables */
+@theme {
+  --color-primary: #059669;
+  --color-tealBrand: #2dd4bf;
+  --color-cyanBrand: #67e8f9;
+}
+
 @media (max-width: 640px) {
   .container {
     padding: 20px;
@@ -28,5 +35,6 @@
 html,
 body {
   overflow-x: hidden;
-  background-color: #11111;
+  background-color: #ffffff;
 }
+
